# WC2026Over9000Bot

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.local.yml  docker-compose.yml  predictions.example.yml  pyproject.toml
.github/workflows/: docker-deploy.yml
.squad/: .first-run  decisions-archive.md  decisions.md  health-report-2026-06-15T12-21-46Z.md  health-report-2026-06-15T13-14-00Z.md  health-report-2026-06-15T16.md  routing.md  scribe-health-report-20260615.md  team.md
.squad/casting/: history.json  policy.json  (+1 more)
data/: TongoPhrases.txt  TongoUsers.template.yml  TongoUsers.yml  predictions.template.yml
docs/: REFERENCIA.md
tests/: conftest.py  test_ai.py  test_api_client.py  test_best_qualifying_thirds.py  test_camps.py  test_chart.py  test_chat.py  test_chat_edge_cases.py  test_clip_finder.py  test_clip_store.py  test_commentators.py  test_config.py  test_downloader.py  test_elecciones.py  test_endirecto_store.py  test_engine.py  test_engine_evolution.py  test_espn_client.py  test_espn_formatter.py  test_espn_scanner.py  test_evolucion_handler.py  test_final_ceremony.py  test_formatters.py  test_gender.py  test_goal_extractor.py  test_goal_formatter.py  test_handlers.py  test_history.py  test_history_backfill.py  test_live_seeding_edge_cases.py  test_main_calcularperfiles.py  test_match_events.py  test_podium_image.py  test_podium_image_edge_cases.py  test_poll_finished_job.py  test_poll_goal_clips_job.py  test_poll_goals_job.py  test_poll_kickoff_job.py  test_poll_thread_goals_job.py  test_porra_live.py  (+19 more)
(+198 files in other folders)
