[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "worldcup_bot"
version = "0.1.0"
description = "Telegram porra bot for the 2026 FIFA World Cup"
requires-python = ">=3.12"
dependencies = [
    "python-telegram-bot[job-queue]>=21,<22",
    "requests>=2.31",
    "pyyaml>=6.0",
    "emoji-country-flag>=2.0",
    "pytz>=2024.1",
    "truststore>=0.9",
    "yt-dlp>=2024.0",
    "gender-guesser>=0.4",
    "openai>=1.40",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "responses>=0.25",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
